XJCM-11A+:V7.2.0.10 build1901061559（标准版-正式版） 更改记录: 2019年1月5日 修复保存xls名称与9A一致 修复勾选xls不能记忆的问题

--- a/SolarCellTester/SolarCellTesterCHS.rc
+++ b/SolarCellTester/SolarCellTesterCHS.rc
@@ -226,7 +226,7 @@ BEGIN
     COMBOBOX        IDC_COMBO2,230,253,80,49,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "删除",IDC_BUTTON_DELZ,257,271,48,14
     CONTROL         "数据上传(sql)",IDC_CHECKSQL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,243,111,62,10
-    CONTROL         "保存XLS文件",IDC_CHECK_SAVEPARAXLS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,64,57,10
+    CONTROL         "保存EXCEL文件",IDC_CHECK_SAVEPARAXLS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,64,64,10
 END
 
 IDD_DLGSET_SUNPARA DIALOGEX 0, 0, 365, 308
