--- a/SolarCellTester/SolarCellTesterENU.rc
+++ b/SolarCellTester/SolarCellTesterENU.rc
@@ -281,43 +281,43 @@ BEGIN
     DEFPUSHBUTTON   "Reset to default ",IDC_SETBASE_DEFAULT,142,326,62,14
 END
 
-IDD_DLGSET_CURVEIV DIALOGEX 0, 0, 325, 286
+IDD_DLGSET_CURVEIV DIALOGEX 0, 0, 325, 306
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "English",IDC_RADIO_E,"Button",BS_AUTORADIOBUTTON | WS_GROUP,87,83,46,10
-    CONTROL         "Chinese",IDC_RADIO_C,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,27,83,46,10
-    CONTROL         "Serial NO.",IDC_RADIO1,"Button",BS_AUTORADIOBUTTON | WS_GROUP,190,134,46,10
-    CONTROL         "DateTime",IDC_RADIO2,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,258,134,46,10
-    PUSHBUTTON      "Clear",IDC_BUTTON6,129,269,34,14
+    CONTROL         "English",IDC_RADIO_E,"Button",BS_AUTORADIOBUTTON | WS_GROUP,87,102,46,10
+    CONTROL         "Chinese",IDC_RADIO_C,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,27,102,46,10
+    CONTROL         "Serial NO.",IDC_RADIO1,"Button",BS_AUTORADIOBUTTON | WS_GROUP,190,152,46,10
+    CONTROL         "DateTime",IDC_RADIO2,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,258,152,46,10
+    PUSHBUTTON      "Clear",IDC_BUTTON6,129,287,34,14
     CONTROL         "Don't Clear Input Box",IDC_CHECK_SWCLEAR,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,168,77,81,10
-    PUSHBUTTON      "Clear",IDC_BUTTON4,62,269,34,14
+    PUSHBUTTON      "Clear",IDC_BUTTON4,62,287,34,14
     CONTROL         "Save CSV File",IDC_CHECK_SAVEPARA,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,19,57,10
     CONTROL         "Save Original Data",IDC_CHECK_SAVEDAQ,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,77,19,71,10
     CONTROL         "Save Image",IDC_CHECK_SAVEJPG,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,77,53,56,10
     CONTROL         "Serial NO.",IDC_CHECK_SWSERIAL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,168,20,52,10
     CONTROL         "Auto NO.",IDC_CHECK_SWAUTO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,168,39,45,10
     EDITTEXT        IDC_EDIT_AUTO,266,37,40,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_FILEPATH,61,103,167,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "File Path",IDC_BUTTON2,7,103,50,14
+    EDITTEXT        IDC_EDIT_FILEPATH,61,121,167,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "File Path",IDC_BUTTON2,7,121,50,14
     LTEXT           "Auto Base",IDC_STATIC,229,39,34,8
-    GROUPBOX        "Content",IDC_STATIC,8,7,151,62
-    GROUPBOX        "Serial NO. Style",IDC_STATIC,161,7,160,92
+    GROUPBOX        "Content",IDC_STATIC,8,7,151,81
+    GROUPBOX        "Serial NO. Style",IDC_STATIC,161,7,160,109
     CONTROL         "Enable Input Box",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,168,58,68,10
-    EDITTEXT        IDC_EDIT3,227,203,93,14,ES_AUTOHSCROLL
-    LTEXT           "Manufacturer",IDC_STATIC,177,206,46,8
-    LISTBOX         IDC_LIST2,63,133,48,132,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    LISTBOX         IDC_LIST3,115,133,48,132,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Parameter",IDC_STATIC,9,121,34,8
-    LTEXT           "To File",IDC_STATIC,63,121,22,8
-    LTEXT           "To Display",IDC_STATIC,115,121,34,8
-    PUSHBUTTON      "To Display",IDC_BUTTON3,9,251,48,14
-    PUSHBUTTON      "To File",IDC_BUTTON5,9,269,48,14
-    LISTBOX         IDC_LIST4,9,133,48,115,LBS_MULTIPLESEL | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    GROUPBOX        "DAQ And Image File Name",IDC_STATIC,175,121,146,30
-    EDITTEXT        IDC_EDIT5,184,167,129,14,ES_AUTOHSCROLL
-    GROUPBOX        "I-V Parameter File Name",IDC_STATIC,175,155,146,44
-    CONTROL         "Date Update",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,184,182,74,13,WS_EX_TRANSPARENT
+    EDITTEXT        IDC_EDIT3,227,221,93,14,ES_AUTOHSCROLL
+    LTEXT           "Manufacturer",IDC_STATIC,177,224,46,8
+    LISTBOX         IDC_LIST2,63,151,48,132,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LISTBOX         IDC_LIST3,115,151,48,132,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Parameter",IDC_STATIC,9,139,34,8
+    LTEXT           "To File",IDC_STATIC,63,139,22,8
+    LTEXT           "To Display",IDC_STATIC,115,139,34,8
+    PUSHBUTTON      "To Display",IDC_BUTTON3,9,269,48,14
+    PUSHBUTTON      "To File",IDC_BUTTON5,9,287,48,14
+    LISTBOX         IDC_LIST4,9,151,48,115,LBS_MULTIPLESEL | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    GROUPBOX        "DAQ And Image File Name",IDC_STATIC,175,139,146,30
+    EDITTEXT        IDC_EDIT5,184,185,129,14,ES_AUTOHSCROLL
+    GROUPBOX        "I-V Parameter File Name",IDC_STATIC,175,173,146,44
+    CONTROL         "Date Update",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,184,200,74,13,WS_EX_TRANSPARENT
     CONTROL         "Save MDB File",IDC_CHECK_SAVEPARA2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,36,57,10
     CONTROL         "Input After Test",IDC_CHECK_SWCLEAR2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,251,58,63,10
     CONTROL         "Save calibrated Data",IDC_CHECK_SAVEDAQ2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,77,36,78,10
@@ -325,16 +325,17 @@ BEGIN
     EDITTEXT        IDC_EDIT_SNLENGTH,266,18,40,14,ES_AUTOHSCROLL
     LTEXT           "SN Length",IDC_STATIC,227,20,33,8
     CONTROL         "Serial NO.Unique",IDC_CHECK_SERIALUNIQUE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,251,77,68,10
-    PUSHBUTTON      "Sort",IDC_BUTTON_SORT,100,269,25,14
-    GROUPBOX        "Listbox Style",IDC_STATIC,10,72,129,27
-    LTEXT           "Custom Fields",IDC_STATIC,183,233,45,8
-    LTEXT           "Field    Values",IDC_STATIC,183,250,44,8
-    PUSHBUTTON      "Add",IDC_BUTTON_ADDZ,188,265,48,14
-    GROUPBOX        "Custom",IDC_STATIC,176,217,146,65
-    COMBOBOX        IDC_COMBO1,231,231,80,44,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_COMBO2,231,247,80,49,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "Delete",IDC_BUTTON_DELZ,258,265,48,14
-    CONTROL         "SQL Server",IDC_CHECKSQL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,243,105,52,10
+    PUSHBUTTON      "Sort",IDC_BUTTON_SORT,100,287,25,14
+    GROUPBOX        "Listbox Style",IDC_STATIC,10,91,129,27
+    LTEXT           "Custom Fields",IDC_STATIC,183,251,45,8
+    LTEXT           "Field    Values",IDC_STATIC,183,268,44,8
+    PUSHBUTTON      "Add",IDC_BUTTON_ADDZ,188,283,48,14
+    GROUPBOX        "Custom",IDC_STATIC,176,235,146,65
+    COMBOBOX        IDC_COMBO1,231,249,80,44,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBO2,231,265,80,49,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "Delete",IDC_BUTTON_DELZ,258,283,48,14
+    CONTROL         "SQL Server",IDC_CHECKSQL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,243,123,52,10
+    CONTROL         "Save  Excel File",IDC_CHECK_SAVEPARAXLS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,69,63,10
 END
 
 IDD_DLGSET_PARAALARM DIALOGEX 0, 0, 364, 290
@@ -660,7 +661,7 @@ BEGIN
     BEGIN
         LEFTMARGIN, 7
         TOPMARGIN, 7
-        BOTTOMMARGIN, 284
+        BOTTOMMARGIN, 304
     END
 
     IDD_DLGSET_PARAALARM, DIALOG
