增加modbus tcp,实现继承关系;

--- a/SolarCellTester/SolarCellTester.vcproj
+++ b/SolarCellTester/SolarCellTester.vcproj
@@ -1394,6 +1394,14 @@
 				RelativePath=".\device\serialport.h"
 				>
 			</File>
+			<File
+				RelativePath=".\device\SocketClient.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\device\SocketClient.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="SunAds"
